--- a/front/moduli/programmazione/parte_1/inizio.html
+++ b/front/moduli/programmazione/parte_1/inizio.html
@@ -107,7 +107,7 @@
         <div id="carouselContent" class="carousel slide" style="background-color: rgba(0,0,0,0.6);" data-ride="carousel" data-interval="false">
 			<div class="carousel-inner" style="padding-left: 4em; padding-right: 4em; " role="listbox">
 					<div class="carousel-item active text-center p-4">
-                         <p>iniziamo con il creare un breve programma che stampa "Hello world!". in Python usiamo <a href="https://www.html.it/pag/39740/le-funzioni-print-e-input/" target="_blank">print</a> 
+                         <p>Iniziamo con il creare un breve programma che stampa "Hello world!". in Python usiamo <a href="https://www.html.it/pag/39740/le-funzioni-print-e-input/" target="_blank">print</a> 
                             per stampare su schermo, può essere usato <a href=../esempi/esempio_1.html target="_blank">singolarmete</a>
                             o può essere usato per stampare  <a href=../esempi/esempio_2.html target="_blank">multiple</a> linee di testo.</p>
                             <p>Per definire variabili in Python, è sufficiente utilizzare l’operatore di assegnamento (=), a differenza di altri linguaggi di programmazione,
