--- a/front/moduli/programmazione/parte_2/test_3.html
+++ b/front/moduli/programmazione/parte_2/test_3.html
@@ -219,36 +219,30 @@
                                     >>>i+=1
                                 </div>
                                 <div>
+                                    <input type="radio" class="col-1" name="prog33" value="one" />1.
+                                </div>
+                                <div>
                                     <input
                                         type="radio"
                                         class="col-1"
                                         name="prog33"
-                                        value="one"
-                                    />1.
+                                        value="noone"
+                                    />Nessuno.
                                 </div>
-                                    <div>
-                                        <input
-                                            type="radio"
-                                            class="col-1"
-                                            name="prog33"
-                                            value="noone"
-                                        />Nessuno.
-                                    </div>
-                                    <div>
-                                        <input
-                                            type="radio"
-                                            class="col-1"
-                                            name="prog33"
-                                            value="infinity"
-                                        />Infiniti.
-                                        <div></div>
-                                        <input
-                                            type="radio"
-                                            class="col-1"
-                                            name="prog33"
-                                            value="twelve"
-                                        />12.
-                                    </div>
+                                <div>
+                                    <input
+                                        type="radio"
+                                        class="col-1"
+                                        name="prog33"
+                                        value="infinity"
+                                    />Infiniti.
+                                    <div></div>
+                                    <input
+                                        type="radio"
+                                        class="col-1"
+                                        name="prog33"
+                                        value="twelve"
+                                    />12.
                                 </div>
                             </div>
                         </div>
