--- a/front/info/info.html
+++ b/front/info/info.html
@@ -19,13 +19,17 @@
 				background-image: url("../images/banner.jpg");
 			}
 		</style>
-		<script></script>
+		<script>
+			$(function () {
+				localStorage.info = "visitato";
+			});
+		</script>
 	</head>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
 		<!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
     le classi navbar-light/dark e bg-light/dark sono per il tema il primo per
     uso a invece che span per rendere il contenuto interattivo  -->
-		<a class="navbar-brand" href="#">Edu@home</a>
+		<a class="navbar-brand" href="../index.php">Edu@home</a>
 		<!-- ancora come in questo caso -->
 		<button
 			class="navbar-toggler"
@@ -43,7 +47,7 @@
         che formerà un menù ad hamburger (grazie alle magie js)nel caso la pagina fosse troppo stretta per mostrare tuto -->
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto dropdown">
-				<a class="navbar-brand nav-link" href="#footer">Contatti</a>
+				<a class="navbar-brand nav-link" href="../index.php#footer">Contatti</a>
 			</ul>
 		</div>
 	</nav>
