--- a/front/info/info.html
+++ b/front/info/info.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../assets/css/bootstrap.css" />
+		<link rel="stylesheet" href="../assets/css/font-awesome.min.css" />
 		<link rel="stylesheet" href="../assets/css/home-made.css" />
 		<script src="../assets/js/jquery.min.js"></script>
 		<script src="../assets/js/bootstrap.js"></script>
@@ -53,29 +54,50 @@
 	</nav>
 	<section class="d-flex justify-content-center" style="padding: 6em;">
 		<div class="card-deck">
-			<div class="card border-primary" style="width: 20rem;">
+			<div class="card border-primary" style="width: 18rem; margin: 3rem;">
 				<img class="card-img-top" src="media/SimoneRotondi.jpg" alt="Card image cap" />
 				<div class="card-body">
 					<h5 class="card-title">Simone Rotondi</h5>
 					<hr />
 					<p class="card-text">Studente di ingegneria automatica al terzo anno.</p>
 				</div>
+				<audio
+					class="card-footer"
+					style="border-radius: 0%; width: 18rem;"
+					src="media/elettronica.ogg"
+					type="audio/ogg"
+					controls="controls"
+				></audio>
 			</div>
-			<div class="card border-primary" style="width: 20rem;">
+			<div class="card border-primary" style="width: 18rem; margin: 3rem;">
 				<img class="card-img-top" src="media/SimoneRotondi.jpg" alt="Card image cap" />
 				<div class="card-body">
 					<h5 class="card-title">Francesco Riccioni</h5>
 					<hr />
 					<p class="card-text">Studente di ingegneria automatica al terzo anno.</p>
 				</div>
+				<audio
+					class="card-footer"
+					controls="controls"
+					style="border-radius: 0%; width: 18rem;"
+					src="media/elettronica.ogg"
+					type="audio/ogg"
+				></audio>
 			</div>
-			<div class="card border-primary" style="width: 20rem;">
+			<div class="card border-primary" style="width: 18rem; margin: 3rem;">
 				<img class="card-img-top" src="media/SimoneRotondi.jpg" alt="Card image cap" />
 				<div class="card-body">
 					<h5 class="card-title">Giovannino Orlando</h5>
 					<hr />
 					<p class="card-text">Studente di ingegneria informatica al terzo anno</p>
 				</div>
+				<audio
+					class="card-footer"
+					style="border-radius: 0%; width: 18rem;"
+					src="media/elettronica.ogg"
+					type="audio/ogg"
+					controls="controls"
+				></audio>
 			</div>
 		</div>
 	</section>
