--- a/front/moduli/programmazione/parte_1/test_2.html
+++ b/front/moduli/programmazione/parte_1/test_2.html
@@ -16,7 +16,7 @@
 		<style>
             
 			body {
-				background-image: url(../immagini/prog4.jpg);
+				background-image: url(../immagini/prova12.jpeg);
 				background-repeat: no-repeat;
 				background-attachment: fixed;
 				background-size: cover;
@@ -75,7 +75,7 @@
 						Profilo
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-						<a class="dropdown-item" href="/front/profilo.php">Impostazioni</a>
+						<a class="dropdown-item" href="/front/profilo/profile.php">Impostazioni</a>
 						<div class="dropdown-divider"></div>
 						<a class="dropdown-item" href="/front/index.php#footer">Suggerimenti</a>
 					</div>
@@ -207,6 +207,7 @@
 											value="sette"
 											onclick="increase()"
 											/>7
+											</div>
 										<div>
 										<input
 											type="radio"
