--- a/front/moduli/programmazione/parte_1/test_2.html
+++ b/front/moduli/programmazione/parte_1/test_2.html
@@ -109,7 +109,7 @@
 			Iniziamo
 			<br /><br />
 			<!--cambiare poi in post-->
-			<form action="introtest.php" method="POST" onsubmit="return verifica();">
+			<form action="ritest.php" method="POST" onsubmit="return verifica();">
 				<div class="row">
 					<div class="col-3">
 						<div class="list-group" id="list-tab" role="tablist">
