--- a/front/moduli/programmazione/parte_1/inizio.html
+++ b/front/moduli/programmazione/parte_1/inizio.html
@@ -95,7 +95,7 @@
                 </form>
                 -->
 			
-		</nav>
+		
         <br /><br /><br />
         
 		
@@ -162,4 +162,7 @@
 				
 			</div>
 		</div>
+		
+	</body>
+</html>
 		
