--- a/front/info/info.html
+++ b/front/info/info.html
@@ -64,7 +64,7 @@
 				<audio
 					class="card-footer"
 					style="border-radius: 0%; width: 18rem;"
-					src="media/elettronica.ogg"
+					src="media/SimoneR.ogg"
 					type="audio/ogg"
 					controls="controls"
 				></audio>
