--- a/front/moduli/programmazione/inizio/test_fond.html
+++ b/front/moduli/programmazione/inizio/test_fond.html
@@ -26,7 +26,7 @@
 
         <style>
             body {
-                background-image: url(../immagini/progtest.jpg);
+                background-image: url(../immagini/prova12.jpeg);
                 background-repeat: no-repeat;
                 background-attachment: fixed;
                 background-size: cover;
