--- a/front/moduli/programmazione/parte_1/inizio.html
+++ b/front/moduli/programmazione/parte_1/inizio.html
@@ -117,7 +117,7 @@
 			<div class="carousel-inner" style="padding-left: 4em; padding-right: 4em; " role="listbox">
 					<div class="carousel-item active text-center p-4">
                          <p>Iniziamo con il creare un breve programma che stampa "Hello world!". in Python usiamo <a href="https://www.html.it/pag/39740/le-funzioni-print-e-input/" target="_blank">print</a> 
-                            per stampare su schermo, può essere usato <a name="exe" class="text-primary" value=../esempi/esempio_1.html target="_blank">singolarmete</a>
+                            per stampare su schermo, può essere usato <a name="exe" class="text-primary" value="../esempi/esempio_1.html" target="_blank">singolarmete</a>
                             o può essere usato per stampare  <a name="exe" class="text-primary" value=../esempi/esempio_2.html target="_blank">multiple</a> linee di testo.</p>
                             <p>Per definire variabili in Python, è sufficiente utilizzare l’operatore di assegnamento (=), a differenza di altri linguaggi di programmazione,
                                 non va specificato il tipo di variabile,
