--- a/front/moduli/programmazione/parte_1/test_2.html
+++ b/front/moduli/programmazione/parte_1/test_2.html
@@ -7,10 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>intronduzione a Python</title>
 		<link rel="shortcut icon" href="../../../favicon.ico" />
-		<link rel="stylesheet" href="../../../bootstrap-4.4.1-dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="../../../assets/css/bootstrap.css" />
 		<link rel="stylesheet" href="../../../assets/css/home-made.css" />
 		<link rel="stylesheet" href="../slideshow.css" />
-		<script src="../../../jQuery/jquery.min.js"></script>
+		<script src="../../../assets/js/jquery.min.js"></script>
 		<script src="../../../assets/js/bootstrap.js" lang="--js"></script>
 		
 		<style>
