--- a/front/moduli/programmazione/esempi/esempio_1.html
+++ b/front/moduli/programmazione/esempi/esempio_1.html
@@ -1,1 +1,11 @@
-<iframe src="https://trinket.io/embed/python/dfd759a0cb?runOption=run&start=result" width="100%" height="356" frameborder="0" marginwidth="0" marginheight="0" allowfullscreen></iframe>
+<!-- @format -->
+
+<iframe
+	src="https://trinket.io/embed/python/dfd759a0cb?runOption=run&start=result"
+	width="100%"
+	height=""
+	frameborder="0"
+	marginwidth="0"
+	marginheight="0"
+	allowfullscreen
+></iframe>
