--- a/front/moduli/programmazione/parte_1/inizio.html
+++ b/front/moduli/programmazione/parte_1/inizio.html
@@ -16,6 +16,7 @@
 			$(function () {
 				$("span[name='exe']").click(function () {
 					val = $(this).attr("value");
+					$(this).removeClass("hidden");
 					$.ajax({
 						type: "GET",
 						url: val,
@@ -39,6 +40,9 @@
 			h1 {
 				text-align: center;
 				color: yellow;
+			}
+			.hidden {
+				display: none;
 			}
 		</style>
 	</head>
@@ -109,164 +113,179 @@
                 </form>
                 -->
 
-		<br /><br /><br />
-
-		<div class="container">
-			<h1>Un po' di teoria</h1>
-		</div>
-		<div class="container-xl text-monospace text-white">
-			<div
-				id="carouselContent"
-				class="carousel slide"
-				style="background-color: rgba(0, 0, 0, 0.6);"
-				data-ride="carousel"
-				data-interval="false"
-			>
-				<div
-					class="carousel-inner"
-					style="padding-left: 4em; padding-right: 4em;"
-					role="listbox"
-				>
-					<div class="carousel-item active text-center p-4">
-						<p>
-							Iniziamo con il creare un breve programma che stampa "Hello world!". in
-							Python usiamo
-							<a
-								value="https://www.html.it/pag/39740/le-funzioni-print-e-input/"
-								target="_blank"
-								>print</a
-							>
-							per stampare su schermo, può essere usato
-							<span name="exe" class="text-primary" value="../esempi/esempio_1.html"
-								>singolarmete</span
-							>
-							o può essere usato per stampare
-							<span name="exe" class="text-primary" value="../esempi/esempio_2.html"
-								>multiple</span
-							>
-							linee di testo.
-						</p>
-						<p>
-							Per definire variabili in Python, è sufficiente utilizzare l’operatore
-							di assegnamento (=), a differenza di altri linguaggi di programmazione,
-							non va specificato il tipo di variabile,
-						</p>
-						<p>
-							come nell'<span
-								name="exe"
-								class="text-primary"
-								value="../esempi/esempio_3.html"
-								>esempio</span
-							>
-							.Consiglio di dare un'occhiata ai tipi di
-							<a
-								href="https://www.html.it/pag/65934/tipi-built-in-riepilogo"
-								target="_blank"
-								>dato</a
-							>
-							in Python
-						</p>
-					</div>
-					<div class="carousel-item text-center p-4">
-						<p>
-							Le operazioni aritmetiche sono le più classiche. la somma(+), la
-							sottrazione(-), la moltiplicazione(*),la divisione(/), il modulo,ovvero
-							il resto della divisione(%),la divisione intera(//). In python la
-							divisione tra due Int da come risultato un float. per elevare a potenza
-							si usa il doppio asterisco(**), le operazioni artimetiche possono essere
-							eseguita sia su numeri positivi che negativi. Per le operazioni più
-							complesse, come ad esempio la radice quadrata si può importare una
-							libreria, che ne facilita l'utilizzo, ma questo lo vedremo in futuro. Si
-							ha un esempio delll'utilizzo delle operazioni
-							<span name="exe" class="text-primary" value="../esempi/esempio_4.html"
-								>aritmetiche</span
-							>
-							in Python
-						</p>
-					</div>
-					<div class="carousel-item text-center p-4">
-						<p>
-							Per prendere input da tastiera, in Python si può usare intuitivamente la
-							funzione
-							<a
-								href="https://www.html.it/pag/39740/le-funzioni-print-e-input"
-								target="_blank"
-								>input</a
-							>
-							la funziona da istruzzioni all'utente su cosa inserire come input, e
-							prende l'input come stringa. Come gli interi ed i float in Python le
-							stringhe possono essere
-							<span
-								name="exe"
-								class="text-primary"
-								value="../esempi/esempio_5.html"
-								target="_blank"
-								>sommate</span
-							>
-							con (+). Ma non si possono aggiungere stringhe con i numeri. L e
-							stringhe possono essere moltiplicate per interi, questo produce una
-							ripetuta versione della stringa originale.
-						</p>
-						<p>
-							In python, è impossibile completare certe operazione dove sono coinvolti
-							due tipi diversi. Per esempio non si possono sommare le due stringhe che
-							contengono i numeri "2" e "3", il risultato sarebbe "23",non 5. La
-							soluzione a questo è la conversione di
-							<span name="exe" class="text-primary" value="../esempi/esempio_6.html"
-								>tipo</span
-							>
-						</p>
-					</div>
-					<div class="carousel-item text-center p-4">
-						<p>
-							in precedenza ho spiegato come si assegnano, ma cosa sono?Le variabili
-							giocano un ruolo molto importante nei linguaggi di programmazione e
-							Python non è un eccezzione. una variabile ti permette di immagazzinare
-							un dato in un nome, al quale ci si potrà riferire in futuro nel
-							programma. ci sono certe restrizioni sul nome, devono iniziare per una
-							lettera e sono ammessi solo numeri, lettere e trattini bassi. Possiamo
-							anche assegnare una variabile all'input dell'utente.
-						</p>
-					</div>
-					<div class="carousel-item text-center p-4">
-						<p>
-							<a href="test_2.html"
-								>Qui si può andare al modulo della prima esercitazione</a
-							>
-						</p>
-					</div>
-				</div>
-				<a
-					class="carousel-control-prev"
-					href="#carouselContent"
-					role="button"
-					data-slide="prev"
-					data-interval="false"
-				>
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a
-					class="carousel-control-next"
-					href="#carouselContent"
-					role="button"
-					data-slide="next"
-					data-interval="false"
-				>
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
+		<div style="padding: 6em 0 6em 0;">
+			<div class="container">
+				<h1>Un po' di teoria</h1>
 			</div>
+			<div class="container-xl text-monospace text-white">
+				<div
+					id="carouselContent"
+					class="carousel slide"
+					style="background-color: rgba(0, 0, 0, 0.6);"
+					data-ride="carousel"
+					data-interval="false"
+				>
+					<div
+						class="carousel-inner"
+						style="padding-left: 4em; padding-right: 4em;"
+						role="listbox"
+					>
+						<div class="carousel-item active text-center p-4">
+							<p>
+								Iniziamo con il creare un breve programma che stampa "Hello world!".
+								in Python usiamo
+								<a
+									value="https://www.html.it/pag/39740/le-funzioni-print-e-input/"
+									target="_blank"
+									>print</a
+								>
+								per stampare su schermo, può essere usato
+								<span
+									name="exe"
+									class="text-primary"
+									value="../esempi/esempio_1.html"
+									>singolarmete</span
+								>
+								o può essere usato per stampare
+								<span
+									name="exe"
+									class="text-primary"
+									value="../esempi/esempio_2.html"
+									>multiple</span
+								>
+								linee di testo.
+							</p>
+							<p>
+								Per definire variabili in Python, è sufficiente utilizzare
+								l’operatore di assegnamento (=), a differenza di altri linguaggi di
+								programmazione, non va specificato il tipo di variabile,
+							</p>
+							<p>
+								come nell'<span
+									name="exe"
+									class="text-primary"
+									value="../esempi/esempio_3.html"
+									>esempio</span
+								>
+								.Consiglio di dare un'occhiata ai tipi di
+								<a
+									href="https://www.html.it/pag/65934/tipi-built-in-riepilogo"
+									target="_blank"
+									>dato</a
+								>
+								in Python
+							</p>
+						</div>
+						<div class="carousel-item text-center p-4">
+							<p>
+								Le operazioni aritmetiche sono le più classiche. la somma(+), la
+								sottrazione(-), la moltiplicazione(*),la divisione(/), il
+								modulo,ovvero il resto della divisione(%),la divisione intera(//).
+								In python la divisione tra due Int da come risultato un float. per
+								elevare a potenza si usa il doppio asterisco(**), le operazioni
+								artimetiche possono essere eseguita sia su numeri positivi che
+								negativi. Per le operazioni più complesse, come ad esempio la radice
+								quadrata si può importare una libreria, che ne facilita l'utilizzo,
+								ma questo lo vedremo in futuro. Si ha un esempio delll'utilizzo
+								delle operazioni
+								<span
+									name="exe"
+									class="text-primary"
+									value="../esempi/esempio_4.html"
+									>aritmetiche</span
+								>
+								in Python
+							</p>
+						</div>
+						<div class="carousel-item text-center p-4">
+							<p>
+								Per prendere input da tastiera, in Python si può usare
+								intuitivamente la funzione
+								<a
+									href="https://www.html.it/pag/39740/le-funzioni-print-e-input"
+									target="_blank"
+									>input</a
+								>
+								la funziona da istruzzioni all'utente su cosa inserire come input, e
+								prende l'input come stringa. Come gli interi ed i float in Python le
+								stringhe possono essere
+								<span
+									name="exe"
+									class="text-primary"
+									value="../esempi/esempio_5.html"
+									target="_blank"
+									>sommate</span
+								>
+								con (+). Ma non si possono aggiungere stringhe con i numeri. L e
+								stringhe possono essere moltiplicate per interi, questo produce una
+								ripetuta versione della stringa originale.
+							</p>
+							<p>
+								In python, è impossibile completare certe operazione dove sono
+								coinvolti due tipi diversi. Per esempio non si possono sommare le
+								due stringhe che contengono i numeri "2" e "3", il risultato sarebbe
+								"23",non 5. La soluzione a questo è la conversione di
+								<span
+									name="exe"
+									class="text-primary"
+									value="../esempi/esempio_6.html"
+									>tipo</span
+								>
+							</p>
+						</div>
+						<div class="carousel-item text-center p-4">
+							<p>
+								in precedenza ho spiegato come si assegnano, ma cosa sono?Le
+								variabili giocano un ruolo molto importante nei linguaggi di
+								programmazione e Python non è un eccezzione. una variabile ti
+								permette di immagazzinare un dato in un nome, al quale ci si potrà
+								riferire in futuro nel programma. ci sono certe restrizioni sul
+								nome, devono iniziare per una lettera e sono ammessi solo numeri,
+								lettere e trattini bassi. Possiamo anche assegnare una variabile
+								all'input dell'utente.
+							</p>
+						</div>
+						<div class="carousel-item text-center p-4">
+							<p>
+								<a href="test_2.html"
+									>Qui si può andare al modulo della prima esercitazione</a
+								>
+							</p>
+						</div>
+					</div>
+					<a
+						class="carousel-control-prev"
+						href="#carouselContent"
+						role="button"
+						data-slide="prev"
+						data-interval="false"
+					>
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="sr-only">Previous</span>
+					</a>
+					<a
+						class="carousel-control-next"
+						href="#carouselContent"
+						role="button"
+						data-slide="next"
+						data-interval="false"
+					>
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="sr-only">Next</span>
+					</a>
+				</div>
+			</div>
+			<div
+				id="risposta"
+				class="bg-white hidden"
+				style="
+					/* height: 18rem; */
+					padding: 0.5em;
+					margin: 1em 7em 1em 7em;
+					border: 2px solid rgb(0, 68, 255);
+					border-radius: 1em;
+				"
+			></div>
 		</div>
-		<div
-			id="risposta"
-			class="bg-white"
-			style="
-				padding: 0.5em;
-				margin: 3em;
-				border: 2px solid rgb(0, 68, 255);
-				border-radius: 1em;
-			"
-		></div>
 	</body>
 </html>
