--- a/front/moduli/programmazione/parte_1/inizio.html
+++ b/front/moduli/programmazione/parte_1/inizio.html
@@ -135,7 +135,7 @@
                                 Iniziamo con il creare un breve programma che stampa "Hello world!".
                                 in Python usiamo
                                 <a
-                                    value="https://www.html.it/pag/39740/le-funzioni-print-e-input/"
+                                    href="https://www.html.it/pag/39740/le-funzioni-print-e-input/"
                                     target="_blank"
                                     >print</a
                                 >
