--- a/front/moduli/programmazione/parte_2/modulo2.html
+++ b/front/moduli/programmazione/parte_2/modulo2.html
@@ -320,5 +320,16 @@
                 </a>
             </div>
         </div>
+        <div
+            id="risposta"
+            class="bg-white hidden"
+            style="
+                /* height: 18rem; */
+                padding: 0.5em;
+                margin: 1em 7em 1em 7em;
+                border: 2px solid rgb(0, 68, 255);
+                border-radius: 1em;
+            "
+        ></div>
     </body>
 </html>
