--- a/front/moduli/qi/quiz_qi/enigma2.html
+++ b/front/moduli/qi/quiz_qi/enigma2.html
@@ -133,6 +133,8 @@
 						<strong>
 							Hai totalizzato: {{ score() }} / {{ quiz.questions.length }}
 						</strong>
+						<br> <br>
+						<div  style="padding:10px;border-radius: 7px; background-color:rgba(80, 107, 155, 0.836);"> <a class="center text-white" href="../../../learnMap/learnMap.php"><strong> Premi qui per tornare alla learnMap </strong> <a> </div>
 					</div>
 				</div>
 			</div>
@@ -221,10 +223,11 @@
 				function sincdb(punteggio){
 					$.post("enigma2.php", { score:punteggio }, function (data, status) {
 							
-						})
+						}) 
 				}
 				
 			</script>
+			
 		</div>
 	</body>
 </html>
