--- a/front/info/info.html
+++ b/front/info/info.html
@@ -80,12 +80,12 @@
                     class="card-footer"
                     controls="controls"
                     style="border-radius: 0%; width: 18rem;"
-                    src="media/elettronica.ogg"
+                    src="media/Audiofra.ogg"
                     type="audio/ogg"
                 ></audio>
             </div>
             <div class="card border-primary" style="width: 18rem; margin: 3rem;">
-                <img class="card-img-top" src="media/SimoneRotondi.jpg" alt="Card image cap" />
+                <img class="card-img-top" src="media/giova1.jpeg" alt="Card image cap" />
                 <div class="card-body">
                     <h5 class="card-title">Giovannino Orlando</h5>
                     <hr />
@@ -94,7 +94,7 @@
                 <audio
                     class="card-footer"
                     style="border-radius: 0%; width: 18rem;"
-                    src="media/elettronica.ogg"
+                    src="media/regi.m4a"
                     type="audio/ogg"
                     controls="controls"
                 ></audio>
