--- a/front/moduli/programmazione/IDLE.html
+++ b/front/moduli/programmazione/IDLE.html
@@ -2,90 +2,85 @@
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Introduzione alla statistica</title>
-		<link rel="shortcut icon" href="../../favicon.ico" />
-		<link rel="stylesheet" href="../../assets/css/bootstrap.css" />
-		<link rel="stylesheet" href="../../assets/css/home-made.css" />
-		<script src="../../assets/js/jquery.min.js"></script>
-		<script src="../../assets/js/bootstrap.js"></script>
-		<script src="../../assets/"></script>
-		<style>
-			body {
-				background-image: url("../art.jpg");
-				background-repeat: no-repeat;
-				background-attachment: fixed;
-				background-size: cover;
-			}
-			.bg-blur {
-				background-color: rgba(255, 255, 255, 0.4);
-			}
-		</style>
-	</head>
-	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-			<!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
+    <html>
+        <head>
+            <title>edu@home</title>
+            <meta charset="utf-8" />
+            <meta name="viewport" content="width=device-width, initial-scale=1" />
+            <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+            <link rel="stylesheet" href="../../assets/css/bootstrap.css" />
+            <link rel="stylesheet" href="../../assets/css/font-awesome.min.css" />
+            <link rel="stylesheet" href="../../assets/css/home-made.css" />
+            <script src="../../assets/js/jquery.min.js"></script>
+            <script src="../../assets/js/bootstrap.js"></script>
+            <style>
+                body {
+                    background-color: black;
+                    background-repeat: no-repeat;
+                    background-attachment: fixed;
+                    background-size: cover;
+                }
+                .bg-blur {
+                    background-color: rgba(255, 255, 255, 0.4);
+                }
+            </style>
+        </head>
+        <body>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+                <!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
 			le classi navbar-light/dark e bg-light/dark sono per il tema il primo per
 			uso a invece che span per rendere il contenuto interattivo  -->
-			<a class="navbar-brand" href="#">Edu@home</a>
-			<!-- ancora come in questo caso -->
-			<button
-				class="navbar-toggler"
-				type="button"
-				data-toggle="collapse"
-				data-target="#navbarSupportedContent"
-				aria-controls="navbarSupportedContent"
-				aria-expanded="false"
-				aria-label="Toggle navigation"
-			>
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<!-- sopra questo abbiamo una parte che resterà comunque è formattata la pagina, 
+                <a class="navbar-brand" href="../../../index.php">Edu@home</a>
+                <!-- ancora come in questo caso -->
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- sopra questo abbiamo una parte che resterà comunque è formattata la pagina, 
                 mentre sotto abbiamo una parte collapsable ovvero 
                 che formerà un menù ad hamburger (grazie alle magie js)nel caso la pagina fosse troppo stretta per mostrare tuto -->
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a id="home" class="nav-link" href="../../../learnMap/learnMap.php"
-							>Home <span class="sr-only">(current)</span></a
-						>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a
-							class="nav-link dropdown-toggle"
-							href="#"
-							id="navbarDropdown"
-							role="button"
-							data-toggle="dropdown"
-							aria-haspopup="true"
-							aria-expanded="false"
-						>
-							Settaggi Vari
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Action</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Something else here</a>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a
-							id="abdis"
-							class="nav-link disabled"
-							href="http://www.google.it"
-							tabindex="-1"
-							aria-disabled="true"
-							>Abilitabile traguardo (test)</a
-						>
-					</li>
-				</ul>
-				<!-- //inutile il search per ora  
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a id="home" class="nav-link" href="../../../learnMap/learnMap.php"
+                                >LearnMap <span class="sr-only">(current)</span></a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../IDLE.html">IDLE</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto dropdown">
+                        <a
+                            class="nav-link dropdown-toggle"
+                            style="margin-right: 8em;"
+                            href="#"
+                            id="navbarDropdown"
+                            role="button"
+                            data-toggle="dropdown"
+                            aria-haspopup="true"
+                            aria-expanded="false"
+                        >
+                            Profilo
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/front/profilo/profile.php"
+                                >Impostazioni</a
+                            >
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/front/index.php#footer">Suggerimenti</a>
+                        </div>
+                    </ul>
+                </div>
+            </nav>
+            <!-- //inutile il search per ora  
 				<form class="form-inline my-2 my-lg-0">
 					<input
 						class="form-control mr-sm-2"
@@ -98,22 +93,27 @@
 					</button>
                 </form>
                 -->
-			</div>
-		</nav>
-		<br /><br /><br />
 
-		<div class="container-fluid">
-			<div class="flex-sm-column">
-				<iframe
-					src="https://trinket.io/embed/python/4cc717027d"
-					width="100%"
-					height="356"
-					frameborder="0"
-					marginwidth="0"
-					marginheight="0"
-					allowfullscreen
-				></iframe>
-			</div>
-		</div>
-	</body>
+            <br /><br /><br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+
+            <div class="container-fluid">
+                <div class="flex-sm-column">
+                    <iframe
+                        src="https://trinket.io/embed/python/4cc717027d"
+                        width="100%"
+                        height="356"
+                        frameborder="0"
+                        marginwidth="0"
+                        marginheight="0"
+                        allowfullscreen
+                    ></iframe>
+                </div>
+            </div>
+        </body>
+    </html>
 </html>
