--- a/front/moduli/statistica/intro/introtest.html
+++ b/front/moduli/statistica/intro/introtest.html
@@ -83,6 +83,7 @@
 							<a
 								class="list-group-item list-group-item-action active"
 								id="list-primad"
+								style="width: 100%;"
 								data-toggle="list"
 								href="#primad"
 								role="tab"
@@ -91,6 +92,7 @@
 							<a
 								class="list-group-item list-group-item-action"
 								id="list-secd"
+								style="width: 100%;"
 								data-toggle="list"
 								href="#secd"
 								role="tab"
@@ -100,6 +102,7 @@
 								class="list-group-item list-group-item-action"
 								id="list-terzad"
 								data-toggle="list"
+								style="width: 100%;"
 								href="#terzad"
 								role="tab"
 								>Terza</a
@@ -108,6 +111,7 @@
 								class="list-group-item list-group-item-action"
 								id="list-quartad"
 								data-toggle="list"
+								style="width: 100%;"
 								href="#quartad"
 								role="tab"
 								>Quarta</a
@@ -160,7 +164,7 @@
 								<div class="text-xl-center" style="padding: 1em;">
 									Cosa è l'istat?
 									<br />
-									<label class="radiobutton" for="p1p"
+									<label class="radiobutton d-inline-block" for="p1p"
 										>Organizza le lotterie
 										<input
 											class="radio"
@@ -170,7 +174,7 @@
 											value="1"
 										/>
 									</label>
-									<label class="radiobutton" for="p2p"
+									<label class="radiobutton d-inline-block" for="p2p"
 										>publico italiano per l'economia e la finanza
 										<input
 											class="radio"
@@ -180,7 +184,7 @@
 											value="2"
 										/>
 									</label>
-									<label class="radiobutton" for="p3p"
+									<label class="radiobutton d-inline-block" for="p3p"
 										>Istituto nazionale di statistica
 										<input
 											class="radio"
@@ -192,7 +196,7 @@
 										/>
 									</label>
 
-									<label class="radiobutton" for="p4p"
+									<label class="radiobutton d-inline-block" for="p4p"
 										>Servizi Segreti
 										<input
 											class="radio"
