--- a/front/moduli/programmazione/IDLE.html
+++ b/front/moduli/programmazione/IDLE.html
@@ -81,7 +81,7 @@
 			<br />
 
 			<div style="text-align: center; margin: 4rem; font-size: larger;">
-				Questro è un IDLE per python, provalo!
+				<!-- <h2 class="text-light text-monospace">In bocca al lupo!</h2> -->
 				<div class="d-flex justify-content-around">
 					<iframe
 						class="flex-sm-column"
