forse è la volta buona

--- a/front/learnMap/materie/python.html
+++ b/front/learnMap/materie/python.html
@@ -31,8 +31,8 @@
 					<a href="../moduli/programmazione/inizio/fondamenti.html">
 						<img src="materie/python2.jpg" class="w-100" />
 						<div class="carousel-caption bg-text">
-							<h5>Cosa è python?</h5>
-							<p>Una visione di insieme al mondo della programmazione e di python</p>
+							<h5>Cos'è la programmazione?/h5>
+							<p>Una visione di insieme al mondo della programmazione.</p>
 						</div>
 					</a>
 				</div>
@@ -41,7 +41,7 @@
 						<img src="materie/python1.jpg" class="w-100" />
 						<div class="carousel-caption bg-text">
 							<h5>Iniziamo</h5>
-							<p>Funzioni in python, l'ideale per iniziare</p>
+							<p>Il nostro primo linguaggio,python!</p>
 						</div>
 					</a>
 				</div>
