--- a/front/info/info.html
+++ b/front/info/info.html
@@ -31,134 +31,81 @@
 			});
 		</script>
 	</head>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
-		<!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+			<!-- href="#" è un ancora in realtà a nulla ma ci permettere di usare il js
     le classi navbar-light/dark e bg-light/dark sono per il tema il primo per
     uso a invece che span per rendere il contenuto interattivo  -->
-		<a class="navbar-brand" href="../index.php">Edu@home</a>
-		<!-- ancora come in questo caso -->
-		<button
-			class="navbar-toggler"
-			type="button"
-			data-toggle="collapse"
-			data-target="#navbarSupportedContent"
-			aria-controls="navbarSupportedContent"
-			aria-expanded="false"
-			aria-label="Toggle navigation"
-		>
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<!-- sopra questo abbiamo una parte che resterà comunque è formattata la pagina, 
+			<a class="navbar-brand" href="../index.php">Edu@home</a>
+			<!-- ancora come in questo caso -->
+			<button
+				class="navbar-toggler"
+				type="button"
+				data-toggle="collapse"
+				data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent"
+				aria-expanded="false"
+				aria-label="Toggle navigation"
+			>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<!-- sopra questo abbiamo una parte che resterà comunque è formattata la pagina, 
         mentre sotto abbiamo una parte collapsable ovvero 
         che formerà un menù ad hamburger (grazie alle magie js)nel caso la pagina fosse troppo stretta per mostrare tuto -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto dropdown">
-                <a class="navbar-brand nav-link" href="../index.php#footer">Contatti</a>
-            </ul>
-        </div>
-    </nav>
-    <section class="d-flex justify-content-center" style="padding: 5em;">
-        <div class="card-deck">
-            <div class="card border-primary" style="width: 18rem; margin: 3rem;">
-                <img class="card-img-top" src="media/SimoneRotondi.jpg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">Simone Rotondi</h5>
-                    <hr />
-                    <p class="card-text">Studente di ingegneria automatica al terzo anno.</p>
-                </div>
-                <audio
-                    class="card-footer"
-                    style="border-radius: 0%; "
-                    src="media/SimoneR.ogg"
-                    type="audio/ogg"
-                    controls="controls"
-                ></audio>
-            </div>
-            <div class="card border-primary" style="width: 18rem; margin: 3rem;">
-                <img class="card-img-top" src="media/francescoR3.jpeg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">Francesco Riccioni</h5>
-                    <hr />
-                    <p class="card-text">Studente di ingegneria automatica al terzo anno.</p>
-                </div>
-                <audio
-                    class="card-footer"
-                    style="border-radius: 0%; "
-                    src="media/Audiofra.ogg"
-					type="audio/ogg"
-					controls="controls"
-                ></audio>
-            </div>
-            <div class="card border-primary" style="width: 18rem; margin: 3rem;">
-                <img class="card-img-top" src="media/giova1.jpeg" alt="Card image cap" />
-                <div class="card-body">
-                    <h5 class="card-title">Giovannino Orlando</h5>
-                    <hr />
-                    <p class="card-text">Studente di ingegneria informatica al terzo anno</p>
-                </div>
-                <audio
-                    class="card-footer"
-                    style="border-radius: 0%;"
-                    src="media/regi.m4a"
-                    type="audio/ogg"
-                    controls="controls"
-                ></audio>
-            </div>
-        </div>
-    </section>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav ml-auto dropdown">
-				<a class="navbar-brand nav-link" href="../index.php#footer">Contatti</a>
-			</ul>
-		</div>
-	</nav>
-	<section class="d-flex justify-content-center" style="padding: 5em;">
-		<div class="card-deck">
-			<div class="card border-primary" style="width: 18rem; margin: 3rem;">
-				<img class="card-img-top" src="media/SimoneRotondi.jpg" alt="Card image cap" />
-				<div class="card-body">
-					<h5 class="card-title">Simone Rotondi</h5>
-					<hr />
-					<p class="card-text">Studente di ingegneria automatica al terzo anno.</p>
-				</div>
-				<audio
-					class="card-footer"
-					style="border-radius: 0%;"
-					src="media/SimoneR.ogg"
-					type="audio/ogg"
-					controls="controls"
-				></audio>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ml-auto dropdown">
+					<a class="navbar-brand nav-link" href="../index.php#footer">Contatti</a>
+				</ul>
 			</div>
-			<div class="card border-primary" style="width: 18rem; margin: 3rem;">
-				<img class="card-img-top" src="media/francescoR3.jpeg" alt="Card image cap" />
-				<div class="card-body">
-					<h5 class="card-title">Francesco Riccioni</h5>
-					<hr />
-					<p class="card-text">Studente di ingegneria automatica al terzo anno.</p>
+		</nav>
+		<section class="d-flex justify-content-center" style="padding: 5em;">
+			<div class="card-deck">
+				<div class="card border-primary" style="width: 18rem; margin: 3rem;">
+					<img class="card-img-top" src="media/SimoneRotondi.jpg" alt="Card image cap" />
+					<div class="card-body">
+						<h5 class="card-title">Simone Rotondi</h5>
+						<hr />
+						<p class="card-text">Studente di ingegneria automatica al terzo anno.</p>
+					</div>
+					<audio
+						class="card-footer"
+						style="border-radius: 0%;"
+						src="media/SimoneR.ogg"
+						type="audio/ogg"
+						controls="controls"
+					></audio>
 				</div>
-				<audio
-					class="card-footer"
-					controls="controls"
-					style="border-radius: 0%;"
-					src="media/elettronica.ogg"
-					type="audio/ogg"
-				></audio>
-			</div>
-			<div class="card border-primary" style="width: 18rem; margin: 3rem;">
-				<img class="card-img-top" src="media/SimoneRotondi.jpg" alt="Card image cap" />
-				<div class="card-body">
-					<h5 class="card-title">Giovannino Orlando</h5>
-					<hr />
-					<p class="card-text">Studente di ingegneria informatica al terzo anno</p>
+				<div class="card border-primary" style="width: 18rem; margin: 3rem;">
+					<img class="card-img-top" src="media/francescoR3.jpeg" alt="Card image cap" />
+					<div class="card-body">
+						<h5 class="card-title">Francesco Riccioni</h5>
+						<hr />
+						<p class="card-text">Studente di ingegneria automatica al terzo anno.</p>
+					</div>
+					<audio
+						class="card-footer"
+						style="border-radius: 0%;"
+						src="media/Audiofra.ogg"
+						type="audio/ogg"
+						controls="controls"
+					></audio>
 				</div>
-				<audio
-					class="card-footer"
-					style="border-radius: 0%;"
-					src="media/elettronica.ogg"
-					type="audio/ogg"
-					controls="controls"
-				></audio>
+				<div class="card border-primary" style="width: 18rem; margin: 3rem;">
+					<img class="card-img-top" src="media/giova1.jpeg" alt="Card image cap" />
+					<div class="card-body">
+						<h5 class="card-title">Giovannino Orlando</h5>
+						<hr />
+						<p class="card-text">Studente di ingegneria informatica al terzo anno</p>
+					</div>
+					<audio
+						class="card-footer"
+						style="border-radius: 0%;"
+						src="media/regi.m4a"
+						type="audio/ogg"
+						controls="controls"
+					></audio>
+				</div>
 			</div>
-		</div>
-	</section>
+		</section>
+	</body>
 </html>
